# opus45-memory-system

./: .env.example  .gitignore  AUTONOMOUS_ISSUES.md  DESIGN.md  GITHUB_INTEGRATION.md  LOGGING_EXAMPLES.md  LOGGING_IMPROVEMENTS.md  README.md  SOUL.md  WRITEUP.md  pyproject.toml  test_associative.py
experiments/: howtouse.py
src/opus_memory/: __init__.py  autonomous_issues.py  cli.py  consent.py  discord_bot.py  embeddings.py  github_integration.py  models.py  run_discord_bot.py  storage.py  system.py
tests/: test_integration.py  test_memory.py
